# SolarDiscord

./: Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
command/: base.py  solar.py
