[tool.poetry]
name = "solardiscord"
version = "0.1.0"
description = ""
authors = ["RektPunk <rektpunk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
discord = "^2.3.2"
langchain-upstage = "^0.1.7"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
